--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 </head>
 <body>
-<div class="wrapper">
+
 
 
 
@@ -26,8 +26,8 @@
     <form class="search_box"  action="<?php bloginfo('home'); ?>/" target="_blank">
     <input type="text" value="Search" name="s" class="search" onfocus="if (this.value == 'Search' ) {this.value = '';}" onblur="if (this.value == '') {this.value = 'Search';}"/>
 
-
-
+</div>
+<div class="wrapper">
 
 
     <section id="mdContainer" data-md="QuickRoute" class="euclidea3">
