--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
 
-
+<div class="header">
 
     <div class="bar">
     <ul class="nav">
@@ -27,7 +27,7 @@
     <input type="text" value="Search" name="s" class="search" onfocus="if (this.value == 'Search' ) {this.value = '';}" onblur="if (this.value == '') {this.value = 'Search';}"/>
 
 </div>
-
+</div>
 
 
     <section id="mdContainer" data-md="QuickRoute" class="euclidea3">
