--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </div>
 
 
-    <section id="mdContainer" data-md="QuickRoute" class="euclidea3">
+    <section width=780px id="mdContainer" data-md="QuickRoute" class="euclidea3">
     </section>
 
 <footer>
